still some layout issues with channels. Added some design features.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -121,7 +121,7 @@ a:link {
 }
 
 #welc-midd {
-  height: 700px;
+  height: 1250px;
 }
 
 #display-message {
@@ -302,7 +302,7 @@ a:link {
 }
 
 #middacc {
-  height: 900px;
+  height: 1050px;
 }
 
 #account-container {
